--- a/home/templates/home/participation_form.html
+++ b/home/templates/home/participation_form.html
@@ -2,10 +2,14 @@
 
 {% block content %}
 
+<h1>Community Participation Information</h1>
+
+<p>Communities that want to participate in the current round of Outreachy internships will need to provide information such as the number of interns they have funding for. Outreachy organizers will then review and approve community participation in this round.</p>
+
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input class="btn btn-primary" type="submit" value="Save community info" />
+    <input class="btn btn-primary" type="submit" value="Save participation info" />
 </form>
 
 {% endblock %}
