--- a/home/templates/home/project_form.html
+++ b/home/templates/home/project_form.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+<h1>Project Information</h1>
+
+<p>Project information will be reviewed by Outreachy organizers and community coordinators. Approved projects will need to meet <a href="/mentor/mentor-faq/#define-a-project">Outreachy project guidelines</a>.</p>
+
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
