Put Outreachy roles and timeline on both overview and community page.
Mentors may be sent to their FOSS community page to sign up, and they
need to have the information duplicated from the main CFP page.

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -16,12 +16,16 @@ Past community participation in Outreachy
 	<h1>Approved Outreachy Community</h1>
 	<h2>{{ community.name }}</h2>
 
-	<p>{{ community.name }} is participating in {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round.</p>
-
-	<p>The Outreachy organizers have received confirmation for funding of {{ participation_info.interns_funded }} intern(s).
+	<p>{{ community.name }} is participating in {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round.
+	The Outreachy organizers have received confirmation for funding of {{ participation_info.interns_funded }} intern(s).
 	Once the application period starts, the community will be listed on the <a href="/{{ current_round.slug }}/">round home page</a>, with a link to
 	the <a href="/{{ current_round.slug }}/communities/{{ community.slug }}">community landing page</a>. The landing page contains detailed information about the community and approved projects.</p>
 	<p>Mentors are encouraged to submit projects for review by coordinators, and volunteers are encouraged to sign up to help Outreachy applicants or review applications.</p>
+
+	<h2>Outreachy roles</h2>
+	{% include "home/roles.html" %}
+	<h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
+	{% include "home/mentor-timeline.html" %}
 
 {% elif participation_info.list_community is None %}
 	<h1>Pending Outreachy Community</h1>
