--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-
+{% extends "base.html" %} 
 {% block title %}
 Call for Outreachy community coordinators, mentors, and volunteers
 {% endblock %}
@@ -9,18 +8,14 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <h1>Call for Participation in Outreachy</h1>
 <p>Outreachy provides three-month internships for people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>. Internships run twice a year.</p>
 <p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers.</p>
+
+<h2>Outreachy roles</h2>
+<p>There are several different Outreachy roles:<p>
+{% include "home/roles.html" %}
+
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
-    <table class=table>
-	<tr><td>{{ current_round.pingnew }}</td><td>Outreachy call for participating communities opens. Mentor and volunteer sign up opens.</td></tr>
-	<tr><td>{{ current_round.appsopen }}</td><td>Outreachy application period opens for applicants and most FOSS communities are listed</td></tr>
-	<tr><td>{{ current_round.lateorgs }}</td><td>Last date for FOSS communities to sign up to participate</td></tr>
-	<tr><td>{{ current_round.ProjectsDeadline }}</td><td>Last date to add new Outreachy internship projects</td></tr>
-	<tr><td>{{ current_round.appsclose }}</td><td>Outreachy application period ends for most communities</td></tr>
-	<tr><td>{{ current_round.LateApplicationsDeadline }}</td><td>Outreachy application period ends for communities with an extended deadline</td></tr>
-	<tr><td>{{ current_round.InternSelectionDeadline }}</td><td>Deadline for mentors to select interns</td></tr>
-	<tr><td>{{ current_round.InternConfirmationDeadline }}</td><td>FOSS communities receive confirmation from Outreachy organizers of final approved interns</td></tr>
-	<tr><td>{{ current_round.internannounce }}</td><td>Interns are publicly announced at 4pm UTC on <a href="/alums/">the alums page</a></td></tr>
-    </table>
+{% include "home/mentor-timeline.html" %}
+
 <h2>Submit a New FOSS community for Organizer Review</h2>
 <p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community.</p>
 <p>If you want a new community to participate in Outreachy, you will need to review the <a href="/mentor/">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
