--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -17,15 +17,15 @@ Call for Outreachy community coordinators, mentors, and volunteers
 {% include "home/mentor-timeline.html" %}
 
 <h2>Submit a New FOSS community for Organizer Review</h2>
-<p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community.</p>
-<p>If you want a new community to participate in Outreachy, you will need to review the <a href="/mentor/">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
+<p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community. Coordinators will need to review the <a href="/mentor/#coordinator">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
 </p>
-<a class='btn btn-primary' href="/communities/cfp/add/">Submit a New Community</a>
+<p><a class='btn btn-primary' href="/communities/cfp/add/">Submit a New Community</a></p>
 
+{% if approved_communities or pending_communities %}
+	<h2>Mentor or Volunteer for a Participating FOSS Community</h2>
 
-<h2>Mentor or Volunteer for a Participating FOSS Community</h2>
-
-<p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
+	<p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/#mentor">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
+{% endif %}
 
 {% if approved_communities %}
 	<p>The community coordinator has indicated these communities will participate in this Outreachy internship round, and the communities have been approved by the Outreachy organizers to participate.</p>
@@ -37,7 +37,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 {% endif %}
 
 {% if pending_communities %}
-	<p>The community coordinator has indicated these communities will participate in this Outreachy internship round, but Outreachy organizer approval is still pending. Mentors and volunteers are encouraged to sign up while the community is under review.</p>
+	<p>The community coordinator has indicated these communities will participate in this Outreachy internship round, but Outreachy organizer approval is still pending. Mentors and volunteers are encouraged to sign up while the community is under review.  If you would like to volunteer or mentor with Outreachy, make sure to <a href="/mentor/#mentor">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
 	<ul>
 	{% for c in pending_communities %}
 		<li><a href="/communities/cfp/{{ c.slug }}/">{{ c.name }}</a></li>
